# vocstat

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
docs/: spec-outline.md  standards-and-literature.md
examples/: tiny-skos.ttl
shapes/: vocstat-skos-info.ttl
src/vocstat/: __init__.py  cli.py  stats.py
tests/: test_stats.py
