[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vocstat"
version = "0.1.0"
description = "Vocabulary statistics and informational SHACL for SKOS vocabularies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "rdflib>=7.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
vocstat = "vocstat.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
